<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">uSchedule</string>
    <string name="warning">Warning!</string>
    <string name="confirm_delete_text">Do you really want delete this?</string>

    <string name="lesson_classroom">Classroom</string>
    <string name="lesson_subject">Subject</string>
    <string name="lesson_agenda">Agenda</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="settings">Settings</string>

    <string name="danil_nikolaev" translatable="false">Danil Nikolaev</string>
    <string name="main_developer" translatable="false">Main Developer</string>

    <string name="max_hubach" translatable="false">Max Hubach</string>
    <string name="backend_logic_developer" translatable="false">Backend Logic Developer</string>

    <string name="version_about">Version %s Build %d</string>
    <string name="cause_error">Application crashed</string>
    <string name="no_items_title">There\'s nothing here</string>
    <string name="set_one_column">Set one column</string>
    <string name="set_two_columns">Set two columns</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="hello">Hello!</string>
    <string name="necessary_data">Necessary data</string>
    <string name="classes_start_time">Classes start time</string>
    <string name="timetable_list">Timetable</string>
    <string name="permissions">Permissions</string>
    <string name="done_msg">Done!</string>
    <string name="setup_1">Let\'s do the initial setup of the application</string>
    <string name="setup_2">Please enter the duration of your lesson and break (min.)</string>
    <string name="setup_3">Please enter a start time of your classes</string>
    <string name="setup_4">Do you want to setup timetable?</string>
    <string name="setup_5">For the full functioning of the application, it needs permissions</string>
    <string name="setup_6">Initial setup is complete. Thank you for installing our application.\nGood luck ;)</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="bells_count">Bells count</string>
    <string name="save">Save</string>
    <string name="input">Input</string>
    <string name="theme">Theme</string>
    <string name="nav_agenda">Agenda</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_updates">Updates</string>
    <string name="no_notes">No notes</string>
    <string name="no_updates">No updates</string>
    <string name="no_lessons">No lessons</string>
    <string name="no_agenda">No agenda</string>
    <string name="drawer_about">About</string>
    <string name="drawer_providers">Providers</string>
    <string name="drawer_groups_list">Groups list</string>
    <string name="drawer_quick_edit">Quick edit</string>
    <string name="drawer_exit">Exit</string>
    <string name="theme_summary" translatable="false">%s – %s</string>
    <string name="in_progress_title">In progress&#8230;</string>
    <string name="warning_theme_old">Theme is deprecated</string>
    <string name="warning_theme_new">Update application for use this theme</string>
    <string name="input_login">Login</string>
    <string name="input_password">Password</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="error">Error</string>
    <string name="pref_account_title">Account</string>
    <string name="pref_appearance_title">Appearance</string>
    <string name="pref_security_title">Security</string>
    <string name="pref_schedule_title">Schedule</string>
    <string name="pref_appearance_main_title">Main</string>
    <string name="pref_appearance_theme_manager_title">Theme manager</string>
    <string name="pref_debug_title">Debug</string>
    <string name="pref_debug_main_title">Main</string>
    <string name="pref_debug_show_error_title">Show error</string>
    <string name="pref_debug_show_error_summary">Shows error on start after crash</string>
    <string name="pref_appearance_other_title">Other</string>
    <string name="pref_appearance_select_current_day_title">Select current day</string>
    <string name="pref_appearance_select_current_day_summary">Schedule screen</string>
    <string name="pref_appearance_theme_manager_summary">Select another theme</string>
    <string name="drawer_subtitle_no_user">Offline mode</string>
    <string name="drawer_title_no_user">Local user</string>
    <string name="pref_schedule_show_date_instead_interim_title">Show date in toolbar instead of interim</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="pref_appearance_theme_changing_title">Theme changing</string>
    <string name="pref_appearance_auto_switch_theme_title">Auto theme switch</string>
    <string name="pref_appearance_day_time_theme_title">Day time</string>
    <string name="pref_appearance_night_time_theme_title">Night time</string>
    <string name="pref_appearance_time_theme_current_theme">Current theme</string>
    <string name="pref_debug_time_title">Time</string>
    <string name="pref_debug_set_morning_time_title">Set morning time</string>
    <string name="pref_debug_set_evening_time_title">Set evening time</string>
    <string name="note_delete_title">Note was deleted</string>
    <string name="events">Events</string>
    <string name="using_gestures_ask_message">Are you using fullscreen gestures in your system?</string>
    <string name="using_gestures_ask_title">Hello</string>
    <string name="show">Show</string>
    <string name="stack_trace">Stack Trace</string>
    <string name="copy_trace">Copy</string>
    <string name="pref_account_user_name_title">User Name</string>
    <string name="change">Change</string>
</resources>
