<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_appearance_main_title" />

    <PreferenceScreen
        android:key="theme"
        android:title="@string/theme"
        app:iconSpaceReserved="false" />

    <PreferenceScreen
        app:iconSpaceReserved="false"
        app:key="theme_manager"
        app:summary="@string/pref_appearance_theme_manager_summary"
        app:title="@string/pref_appearance_theme_manager_title" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_appearance_theme_changing_title" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="auto_switch_theme"
        app:title="@string/pref_appearance_auto_switch_theme_title" />

    <PreferenceScreen
        app:iconSpaceReserved="false"
        app:key="day_time_theme"
        app:title="@string/pref_appearance_day_time_theme_title" />

    <PreferenceScreen
        app:iconSpaceReserved="false"
        app:key="night_time_theme"
        app:title="@string/pref_appearance_night_time_theme_title" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_appearance_other_title" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="select_current_day"
        app:summary="@string/pref_appearance_select_current_day_summary"
        app:title="@string/pref_appearance_select_current_day_title" />

</PreferenceScreen>