<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_debug_main_title" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="show_error"
        app:summary="@string/pref_debug_show_error_summary"
        app:title="@string/pref_debug_show_error_title" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"
        app:title="@string/pref_debug_time_title" />

    <PreferenceScreen
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"
        app:key="set_morning_time"
        app:title="@string/pref_debug_set_morning_time_title" />

    <PreferenceScreen
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"
        app:key="set_evening_time"
        app:title="@string/pref_debug_set_evening_time_title" />

</PreferenceScreen>