<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_quick_edit"
            android:title="@string/drawer_quick_edit" />

        <item
            android:id="@+id/drawer_groups_list"
            android:title="@string/drawer_groups_list" />

        <item
            android:id="@+id/drawer_providers"
            android:title="@string/drawer_providers" />

    </group>

    <group android:id="@+id/one">
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings_outline"
            android:title="@string/settings" />

        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/drawer_about" />
    </group>

    <group android:id="@+id/exit">
        <item
            android:id="@+id/drawer_exit"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/drawer_exit" />
    </group>

</menu>