<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_login" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration"/>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>