<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?colorPrimary"
        android:paddingStart="6dp"
        android:paddingEnd="16dp"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_close" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lessonColorPicker"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lessonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/lesson_subject"
                android:singleLine="true"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?android:textColorSecondary">

                <requestFocus />
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lessonClassroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lessonName"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:hint="@string/lesson_classroom"
                android:singleLine="true"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?android:textColorSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lessonAgenda"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lessonClassroom"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/lesson_agenda"
            android:textAllCaps="false"
            android:textColor="?android:textColorPrimary"
            android:textColorHint="?android:textColorSecondary"
            app:cornerRadius="12dp" />

    </RelativeLayout>

    <ru.melod1n.schedule.widget.horizontalcolorpicker.HorizontalColorPicker
        android:id="@+id/lessonColorPicker"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

